<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/topAppBar"
                    style="@style/Widget.MaterialComponents.Toolbar.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:navigationIcon="@drawable/ic_close_24px"
                    app:title="@string/add_task" />

            </com.google.android.material.appbar.AppBarLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titleTextField"
                style="@style/textBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionTextField"
                style="@style/textBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dueDateTextField"
                style="@style/textBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/due_date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dueDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/estimatedTextField"
                style="@style/textBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/estimated">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/estimated"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reminderDateTextField"
                style="@style/textBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reminder_date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reminder_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reminderTimeTextField"
                style="@style/textBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reminder_time">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reminder_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/button_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/create_button"
                android:textSize="14sp"
                app:backgroundTint="@color/colorSecondary"/>

        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>