<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/title_text"
        style="@style/AddTaskStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textAlignment="textStart" />

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:importantForAutofill="no"
        style="@style/editText" />

    <TextView
        android:id="@+id/description_text"
        style="@style/AddTaskStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textAlignment="textStart" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:importantForAutofill="no"
        style="@style/editText" />

    <TextView
        android:id="@+id/dueDate_text"
        style="@style/AddTaskStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DueDate"
        android:textAlignment="textStart" />

    <EditText
        android:id="@+id/dueDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:importantForAutofill="no"
        style="@style/editText" />

    <TextView
        android:id="@+id/estimated_text"
        style="@style/AddTaskStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/estimated"
        android:textAlignment="textStart" />

    <EditText
        android:id="@+id/estimated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:importantForAutofill="no"
        style="@style/editText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/reminder_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/layout_margin"
            android:paddingLeft="@dimen/small_padding"
            android:text="@string/add_reminder"
            android:textSize="20sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:src="@drawable/ic_add_white_24dp" />

    </LinearLayout>

    <Button
        android:id="@+id/button_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        style="@style/AddTaskStyle"
        android:textSize="14sp"
        android:text="@string/createButton" />

</LinearLayout>
